DecorationRegistry destroys decorations in the wrong order

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.5
    • Affects Version/s: 3.7.2
    • Component/s: Internal Code
    • None
    • Fully Compatible
    • ALL
    • Service Arch 2018-10-22, Service Arch 2018-11-05
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Prior to the fix for SERVER-33437, the DecorationRegistry destroyed decorations in the reverse of the order in which they were constructed. This was by design, to allow for a system in which decorations could be declared on a registry in a certain order, and a developer could expect decoration construction and destruction to proceed in an order similar to regular member variables – constructed in order of declaration, destroyed in reverse order.

      We should restore that ordering, in case anyone wishes to depend on it in the future, and we should test for it.

            Assignee:
            ADAM Martin (Inactive)
            Reporter:
            Andy Schwerin (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: