SERVER-35143 Destroy decorations in reverse order.

To better match what normal behavior is for C++ destructors of
objects, the Decoration system should destroy decorations in
the reverse order of their creation.